--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/validation
+spring.datasource.username=root
+spring.datasource.password=Abhi2@ankur
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+server.port = 9999
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
